# Rentally

./: ERD.drawio  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  Procfile  README.md  cookiecutter-config-file.yml  coverage.xml  docker-compose.override.yml  docker-compose.yml  prestart.sh  pyproject.toml  start-reload.sh  start.sh  tests-start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0a925320a269_initial_schema.py  553b2730ca01_add_customer_model.py  5a4b0745deb7_initial_schema_user_car.py  5c4427d0d2f7_sportscar_schema.py  6ae5debddd29_car_and_user_schema.py  7af1f6670c3f_add_reservation_model.py  7c83a202986a_change_dates_type_to_timestamp_with_.py  901c5b90e55f_car_and_user_schema.py  a142a8446da6_truck_schema.py  a158de614e78_add_reservation_model.py  ab2642f916f0_initial_schema_user_car.py  f449b0ab441f_add_rental_model.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_car.py  crud_customer.py  crud_item.py  crud_rental.py  crud_reservation.py  crud_truck.py  crud_user.py
backend/db dump/: rentally_public_alembic_version.csv  rentally_public_car.csv  rentally_public_customer.csv  rentally_public_user.csv
backend/db_dump/: rentally_public_alembic_version.csv  rentally_public_car.csv  rentally_public_customer.csv  rentally_public_rental.csv  rentally_public_reservation.csv  rentally_public_user.csv
backend/scripts/: format-imports.sh  format.sh  lint.sh  test-cov-html.sh  test-docker.sh  test.sh
(+182 files in other folders)
